# bookstore

./: .gitignore  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml  pyvenv.cfg
.github/workflows/: build.yml
bookstore/: settings.py  urls.py
order/: admin.py  factories.py  urls.py
order/models/: order.py
order/serializers/: order_serializers.py
order/test/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/serializers/: __init__.py  product_serializers.py
product/test/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
