[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Maicon Leandro <snubhousedev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.4"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.1"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
